<resources>
    <string name="app_name">Analityco</string>
    <string name="pref_value_ip_server" translatable="false">api-acceso.analityco.com</string>
    <string name="pref_value_port_server" translatable="false">8000</string>
    <string name="prompt_user_id">Username</string>
    <string name="title_activity_splash" translatable="false">Analityco APP</string>
    <string name="filter_view_http_analityco" translatable="false">filter_view_http_analityco</string>
    <string name="dummy_content" translatable="false">Analityco</string>
    <string name="login_text">Inicia Sesión</string>
    <string name="register_text">Crear Usuario</string>
    <string name="pref_value_username" translatable="false">qwe</string>
    <string name="pref_value_password" translatable="false">1234</string>
    <string name="scan_dni" translatable="false">CÁMARA</string>
    <string name="title_activity_company_list" translatable="false">Lista de Empresas</string>
    <string name="title_activity_personal_list" translatable="false">PERSONAL</string>
    <string name="img_transition" translatable="false">img_transition</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="title_activity_register" translatable="false">Regístrate</string>
    <string name="str_state">ESTADO:</string>
    <string name="str_last_name">APELLIDOS</string>
    <string name="str_name">NOMBRE</string>
    <string name="str_address">DIRECCIÓN</string>
    <string name="str_phone">TELÉFONO</string>
    <string name="str_web_site">SITIO WEB</string>
    <string name="km">KM</string>
    <string name="label_start">Inicio:</string>
    <string name="label_end">Fin:</string>
    <string name="storage" translatable="false">Almacenamiento:</string>
    <string name="maxUser" translatable="false">Usuarios máximos por proyecto:</string>
    <string name="maxPersonal" translatable="false">Consultas máximas de personal por mes:</string>
    <string name="btn_save">GUARDAR</string>
    <string name="gmd_image" translatable="false" />
    <string name="ok">Permitir permisos</string>
    <string name="accept">Aceptar</string>
    <string name="info_btn_scan">Ahora presione el botón "CAMARA" y escanee el código de barras que se encuentra en la parte posterior de la cédula</string>
    <string name="info_btn_project">Haga click sobre la tarjeta del proyecto a seleccionar</string>
    <string name="text_previous">Anterior</string>
    <string name="text_next">Siguiente</string>
    <string name="text_end">Finalizar</string>
    <string name="action_call">Llamar</string>
    <string name="permission_camera_rationale">camara desactivada</string>
    <string name="no_camera_permission">No tiene permisos para ver la camera</string>
    <string name="info_user_inactive">as</string>
    <string name="cancel_button">Cancelar</string>
    <string name="safe_button">Guardar</string>
    <string name="title_activity_company">CompanyActivity</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_aceptar">Aceptar</string>
    <string name="survey_rejected">QUEDATE EN CASA, INFORMA A TU JEFE INMEDIATO Y LLAMA A TU EPS</string>
    <string name="survey_orange">ESPERA EN EL INGRESO DE TU SITIO DE TRABAJO, VAMOS A INVESTIGAR MAS TU CASO</string>
    <string name="survey_ok">ENCUESTA COMPLETADA CON ÉXITO</string>
    <string name="str_current_pass">CONTRASEÑA ACTUAL</string>
    <string name="str_new_pass">NUEVA CONTRASEÑA</string>
    <string name="str_see_contract" translatable="false">VER CONTRATO</string>
    <string name="str_send_contract" translatable="false">SELECCIONAR CONTRATO</string>
    <string name="str_confirm_pass">CONFIRMAR CONTRASEÑA</string>
    <string name="label_ciuu">CIIU</string>
    <string name="label_area_geofence">Area max. de geocerca</string>
    <string name="str_activos">ACTIVOS</string>
    <string name="str_contratos">CONTRATOS</string>
    <string name="str_ordenes">ORDENES</string>
    <string name="str_inactivos">INACTIVOS</string>
    <string name="label_validity">Vigencia</string>
    <string name="action_change_password">Cambiar Contraseña</string>
    <string name="action_edit_profile">Cambia Foto</string>
    <string name="buscar">Buscar</string>
    <string name="action_details" translatable="false">Detalles</string>
    <string name="sync" translatable="false">Sincronizar Dashboard</string>
    <string name="title_activity_employers_list">EMPLEADORES</string>
    <string name="por_vencer">POR VENCER</string>
    <string name="customer">Administradoras</string>
    <string name="projects">Proyectos</string>
    <string name="empleadores">Empresas</string>
    <string name="contratos">Contratos</string>
    <string name="contratosindividual">Contratos Individuales</string>
    <string name="vehiculos">Vehiculos</string>
    <string name="str_nav_main">Inicio - Consultas</string>
    <string name="scanear">Escanear</string>
    <string name="scanearCheck" translatable="false">Registrar y Verificar</string>
    <string name="str_settings">Configuración</string>
    <string name="str_main">PRINCIPAL</string>
    <string name="str_other_branch_offices">OTRAS SUCURSALES</string>
    <string name="str_add_branch_office">Agregar una sucursal</string>
    <string name="str_select_city">SELECCIONE UNA CIUDAD</string>
    <string name="str_razon_social">RAZON SOCIAL *</string>
    <string name="str_number_required">NÚMERO *</string>
    <string name="actividades_economicas">ACTIVIDADES ECONOMICAS</string>
    <string name="str_max_geofence">Tamaño Max. Geocerca:</string>
    <string name="str_digit_city">DIGITE LA CIUDAD</string>
    <string name="str_digit_local_city">CIUDAD DE VIVIENDA</string>
    <string name="str_domains_required">DOMINIOS *</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="action_draw">Dibujar</string>
    <string name="action_current_location">Ubicación</string>
    <string name="str_start">Vigencia:</string>
    <string name="str_end">Fin:</string>
    <string name="title_activity_user_profile">MI PERFIL</string>
    <string name="str_user">USUARIO</string>
    <string name="btn_link">VINCULAR</string>
    <string name="str_label_add_admin_user">Vincular Usuario</string>
    <string name="str_label_add_user" translatable="false">Vincular un usuario </string>
    <string name="str_label_add_commp_proj" translatable="false">VINCULAR EMPRESA</string>
    <string name="str_label_add_stage_proj" translatable="false">Crear nueva etapa</string>
    <string name="str_geofence">GEOCERCA</string>
    <string name="order">ORDENAR</string>
    <string name="str_by_name">Por nombre</string>
    <string name="str_order">Ordenar</string>
    <string name="str_asc">Ascendente</string>
    <string name="str_desc">Descendente</string>
    <string name="str_select">SELECCIONAR</string>
    <string name="str_by_nit">Por NIT</string>
    <string name="str_by_date">Por fecha</string>
    <string name="str_apply">Aplicar</string>
    <string name="str_by_state">Por estado</string>
    <string name="str_by_address">Por dirección</string>
    <string name="str_by_lastname" translatable="false">Por apellido</string>
    <string name="str_by_docnum" translatable="false">Por Num Doc</string>
    <string name="review" translatable="false">Reseña</string>
    <string name="contract_number" translatable="false">Número de contrato</string>
    <string name="str_role">Rol *</string>
    <string name="label_role">Rol</string>
    <string name="label_nit">Nit</string>
    <string name="label_arl">ARL</string>
    <string name="text_cargo">Cargo</string>
    <string name="pref_expiry_days">Dias de alerta para notificaciones</string>
    <string name="pref_summary_company_days">Configure aqui los dias de vigencia</string>
    <string name="pref_summary_employer_days">Configure aqui los dias de vigencia</string>
    <string name="pref_summary_projects_days">Configure aqui los dias de vigencia</string>
    <string name="pref_summary_contracts_days">Configure aqui los dias de vigencia</string>
    <string name="pref_summary_personal_days" translatable="false">Configure aqui los dias de vigencia</string>
    <string name="pref_title_company_days">Empresas</string>
    <string name="pref_title_employer_days">Empleadores</string>
    <string name="pref_title_project_days">Proyectos</string>
    <string name="pref_title_contract_days">Contratos</string>
    <string name="pref_title_personal_days" translatable="false">Personal</string>
    <string name="write_doc" translatable="false">Documento de identificación</string>
    <string name="text_save">GUARDAR</string>
    <string name="crop_image_activity_title" translatable="false">Personalizar Imagen</string>
    <string name="crop_image_menu_rotate_right" translatable="false">Rotar</string>
    <string name="crop_image_menu_crop" translatable="false">Recortar</string>
    <string name="str_contact">CONTACTO</string>
    <string name="title_activity_details_company_tabs" translatable="false">DetailsCompanyActivityTabs</string>
    <string name="title_activity_new_user_admin" translatable="false">NewUserAdminActivity</string>
    <string name="title_activity_details_project_tabs" translatable="false">DetailsProjectActivityTabs</string>
    <string name="title_activity_details_car_tabs" translatable="false">DetailsCarActivityTabs</string>
    <string name="pref_server_info">Servidor</string>
    <string name="pref_title_ip_address_server">IP</string>
    <string name="pref_summary_ip_address_server">Escriba la IP/URL del servidor</string>
    <string name="pref_title_port_server">Port</string>
    <string name="pref_summary_port_server">Escriba el puerto del servidor</string>
    <string name="pref_summary_pass">Digite la contrasena para cambiar configuracion del servidor</string>
    <string name="pref_title_pass" translatable="false">LOCK</string>
    <string name="action_clean">Limpiar</string>
    <string name="action_radius">Radio Círculo</string>
    <string name="pref_bool_server">Utilizar Servidor de Prueba</string>
    <string name="pref_summary_bool_server">Presione el swhitch para cambiar la API</string>
    <string name="modulo_registrar_verificar">Modulo de Verificar y Registrar</string>
    <string name="pref_vibration" translatable="false">Vibrar</string>
    <string name="pref_vibration_desc" translatable="false">Vibrar cuando no se cumplen los requisitos</string>
    <string name="pref_speak">Voz</string>
    <string name="pref_speak_desc">Utilizar voz de ayuda</string>
    <string name="pref_default_start">Inicio de sesion</string>
    <string name="pref_default_start_desc">Inicia sesion en este modulo</string>
    <string name="inicio_sesion_consecutivo_title">Bloqueo de entradas consecutivas</string>
    <string name="inicio_sesion_consecutivo_summary">No se podran registrar dos entradas consecutivas de una misma persona</string>
    <string name="bloqueo_incumplimiento_summary">Solo mostrar el boton de ENTRADA cuando cumple los requisitos</string>
    <string name="bloqueo_incumplimiento_title">Bloqueo por incumplieminto</string>
    <string name="pref_enable_registers">Ver Registros</string>
    <string name="pref_summary_enable_registers">Ver registros en el modulo de detalles</string>
</resources>