<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_draw"
        android:orderInCategory="100"
        android:title="@string/action_draw"
        app:materialIcon="drawing"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="200"
        android:title="@string/action_clean"
        app:materialIcon="delete_circle"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_current_location"
        android:orderInCategory="300"
        android:title="@string/action_current_location"
        app:materialIcon="crosshairs_gps"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_radius"
        app:showAsAction="never" />
</menu>