<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            tools:ignore="UselessParent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_search"
                android:padding="7dp">

                <EditText
                    android:id="@+id/edit_name"
                    style="@style/InnovoEditText"
                    android:hint="@string/str_name"
                    android:inputType="text"
                    android:maxLength="200"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_search"
                android:padding="7dp">

                <EditText
                    android:id="@+id/edit_lastname"
                    style="@style/InnovoEditText"
                    android:hint="@string/str_last_name"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_search"
                android:padding="7dp">

                <EditText
                    android:id="@+id/edit_phone"
                    style="@style/InnovoEditText"
                    android:hint="@string/str_phone"
                    android:inputType="phone"
                    android:maxLength="50"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#ababab" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/negative_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="back"
                android:padding="20dp"
                android:text="@string/cancel_button"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <Button
                android:id="@+id/positive_button"
                style="@style/Widget.Button.Green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_aceptar" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>